[package]
name = "volatile-mem"
version = "0.1.0"
authors = ["Mike Leany"]
license = "MIT OR Apache-2.0"
description = "A library for managing volatile memory"
repository = "https://github.com/mikeleany/volatile-mem"
keywords = ["volatile", "memory"]
categories = ["embedded", "memory-management", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
